--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,10 @@
 //]]></script>
 <body>
   <header>
+    <div>
+          some new stuff!!!!!
+
+    </div>
     <img src="assets/images/icons/clear-view-escapes.svg">
     <a href="#" class ="btn">Get in Touch</a>
     <nav>
