--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,10 @@
           some new stuff!!!!!
 
     </div>
+        <div>
+          more new stuff!!!!!
+
+    </div>
     <img src="assets/images/icons/clear-view-escapes.svg">
     <a href="#" class ="btn">Get in Touch</a>
     <nav>
