last of changes

--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,13 @@
           some new stuff!!!!!
 
     </div>
-        <div>
+    <div>
           more new stuff!!!!!
+
+    </div>
+    
+    <div>
+          last of the new stuff!!!!!
 
     </div>
     <img src="assets/images/icons/clear-view-escapes.svg">
