even more new stuff

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     
     <div>
           last of the new stuff!!!!!
-
+          I lied... even more new stuff!!!!!!!!
     </div>
     <img src="assets/images/icons/clear-view-escapes.svg">
     <a href="#" class ="btn">Get in Touch</a>
