interim debug commit

--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
   <div id="features" class='pg-section pg-section--blue'>
     <div class="wrapper">
       <h2 class="section-title">       
-        <img src="assets/images/icons/star.svg" class="section-title__icon" >
+        <span  style="display: block;" class="icon--star  section-title__icon"> </span> <!--src="assets/images/icons/star.svg"-->
         Our <strong>Features</strong>
       </h2>
 
