--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,8 @@
   <div id="features" class='pg-section pg-section--blue'>
     <div class="wrapper">
       <h2 class="section-title">       
-        <span  style="display: block;" class="icon--star  section-title__icon"> </span> <!--src="assets/images/icons/star.svg"-->
+        <!--<span  style="display: block;" class="icon icon--star section-title__icon"> </span>-->
+        <img class="section-title__icon" src="assets/images/icons/star.svg"/>
         Our <strong>Features</strong>
       </h2>
 
@@ -92,7 +93,8 @@
         <div class='row__med6'> 
         
           <div class="feature-block">
-            <img class="feature-block__icon" src="assets/images/icons/rain.svg">
+            <!--<span class="icon icon--rain feature-block__icon"> </span> -->
+            <img class="feature-block__icon" src="assets/images/icons/rain.svg"/>
             <h3 class="feature-block__title">We&rsquo;ll Watch the Weather</h3>
             <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
           </div>
@@ -123,8 +125,10 @@
   <div id="testimonials" class="pg-section pg-section--testimonials">
     <div class='wrapper wrapper--nopad-tilLg'> 
       <h2 class='section-title section-title--blue'>     
+
     <img class= 'section-title__icon' src="assets/images/icons/comment.svg" >
     Real <strong> Testimonials </strong></h2>
+
     
     <div class="row row--gutter row--gutter-sm row--t-padding generic-content row--eq-height-atLg" style="overflow: visible;">
       <div class="row__lg4">
@@ -150,7 +154,9 @@
       <div class="row__lg4">
         <div class="testimonial testimonial__last" >
           <div class='testimonial__photo'>
-            <img sizes ="160px"  srcset="assets/images/testimonial-cat-i.jpg 160px, assets/images/testimonial-john-hi-dpi-i.jpg 320w">
+
+            <img sizes ="160px"  srcset="assets/images/testimonial-cat-i.jpg 160px, assets/images/testimonial-cat-hi-dpi-i.jpg 320w">
+          </div>
           </div>
           <h3 class=testimonial__title>Cat McKitty</h3>
           <h3 class=testimonial__subtitle>6 Time Escaper</h3>
