--- a/app/index.html
+++ b/app/index.html
@@ -154,7 +154,7 @@
       </div>
       
       <div class="row__lg4">
-        <div class="testimonial" >
+        <div class="testimonial  testimonial__last" >
           <div class='testimonial__photo'>
             <img sizes ="160px"  srcset="assets/images/testimonial-cat-i.jpg 160px, assets/images/testimonial-cat-hi-dpi-i.jpg 320w">
           </div>
@@ -167,6 +167,7 @@
     </div>
     </div>
   </div>
+
 
   <footer class='footer'>
     <div class='wrapper'> 
