--- a/app/index.html
+++ b/app/index.html
@@ -167,7 +167,7 @@
         </div>
       </div>
       
-      <div id ='basic-waypoint' class="row__Lg4">
+      <div class="row__Lg4">
         <div class="testimonial  testimonial__last" >
           <div class='testimonial__photo'>
             <img sizes ="160px"  srcset="assets/images/testimonial-cat.jpg 160px, assets/images/testimonial-cat-hi-dpi.jpg 320w">
